# REFOLD

./: .env.example  .gitattributes  .gitignore  .vercelignore  DAEMON_SETUP.md  LICENSE  Makefile  PCD_global_atlas.json  README.md  com.syalis.refold.pcd.plist  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  setup.cfg  vercel.json
configs/: default.yaml  gpu_server.yaml  m1_mac.yaml
configs/data/: alphafold.yaml  bindingdb.yaml  chembl.yaml  clinvar.yaml
configs/model/: admet_predictor.yaml  molecule_generator.yaml  pocket_detector.yaml  rescue_classifier.yaml
data/raw/: no_alphafold.txt
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml  entrypoint.sh
pcd-website/: package-lock.json  package.json
pcd-website/app/: globals.css  layout.tsx  page.tsx  types.ts
pcd-website/public/: PCD_global_atlas.json
scripts/: analyze_cftr_g85e.py  analyze_gba_l444p.py  analyze_generic.py  backfill_atlas_v2.py  download_data.sh  evaluate_all.py  generate_chaperone_cftr.py  generate_chaperone_gba.py  generate_chaperone_generic.py  pipeline_daemon.py  preprocess_clinvar.py  preprocess_structures.py  preprocess_thermodb.py  run_clinvar_scan.py  run_proteome_scan.py  run_single.py  train_admet_predictor.py  train_molecule_generator.py  train_pocket_detector.py  train_rescue_classifier.py
src/refold/: __init__.py  constants.py  exceptions.py  types.py
tests/: conftest.py
tests/integration/: test_batch_pipeline.py  test_single_mutation_pipeline.py
tests/unit/: test_admet_predictor.py  test_clinvar_parser.py  test_molecule_generator.py  (+4 more)
(+75 files in other folders)
